--- a/Task-1/consumer/Dockerfile
+++ b/Task-1/consumer/Dockerfile
@@ -1,18 +1,12 @@
-FROM eclipse-temurin:21-alpine as builder
-
+FROM maven:3.8.4-openjdk-17-slim AS build
 
 WORKDIR /app
-
-COPY .mvn/ .mvn
-COPY ../mvnw pom.xml ./
-RUN ../mvnw dependency:resolve
-
-COPY src ./src
-
-
-RUN ./mvnw clean package -Dmaven.test.skip
+COPY consumer/pom.xml .
+RUN mvn dependency:resolve
+COPY consumer/src ./src
+RUN mvn package -DskipTests
 
 FROM eclipse-temurin:21-alpine
-EXPOSE 8081
-COPY --from=builder /app/target/consumer-0.0.1-SNAPSHOT.jar /consumer.jar
-CMD ["java", "-jar", "/consumer.jar"]
+WORKDIR /app
+COPY --from=build /app/target/*.jar ./compose.jar
+CMD ["java", "-jar", "compose.jar"]
